# FitnessClientPanel

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  FitnessClientPanel.drawio  LICENSE  README.md  pyproject.toml
app/: __main__.py  logger.py
app/db/: Database.py  __init__.py  config.py  connectionManager.py  database.py  exceptions.py
app/db/scripts/: setup_db.sql
app/db/scripts/procedures/: dropTable.sql  drop_table.sql  drop_tables.sql
app/db/scripts/procedures/client/: add_client.sql  delete_client_plan.sql  get_client.sql  get_client_plan.sql  get_clients.sql  set_plan.sql  (+1 more)
app/db/scripts/tables/: client.sql  client_plan.sql  manager.sql  plan.sql  plan_service.sql  service.sql  sportcenter.sql
app/db/scripts/triggers/: check_plan_times.sql  delete_plan_if_no_service.sql  set_client_plan_final_cost.sql  update_client_balance.sql
app/gui/: LoginScreen.py  MainApplication.py  __init__.py  labels.py
app/gui/admin/: AdminMenuScreen.py
app/gui/manager/: ManagerMenuScreen.py
docs/: FitnessClientPanel.drawio
docs/scripts/: constraints.sql  setup_db.sql
docs/scripts/procedures/: calculate_plan_cost.sql  drop_table.sql
docs/scripts/procedures/manager/: add_manager.sql  get_manager.sql
docs/scripts/procedures/plan/: add_plan.sql  get_plan_tech.sql
docs/scripts/procedures/service/: add_service.sql
docs/scripts/procedures/sportcenter/: add_sportcenter.sql
docs/scripts/tables/: manager.sql  plan_service.sql
docs/scripts/triggers/: check_plan_times.sql  set_client_plan_final_cost.sql  update_client_balance.sql
(+26 files in other folders)
